--- a/Web/app/partials/speakersList/listSpeakers.html
+++ b/Web/app/partials/speakersList/listSpeakers.html
@@ -2,7 +2,8 @@
 <div class="container body-content">
     <div>
         <h2>{{list.Name}}</h2>
-        <div class="well" ng-show="speakers.length == 0">There is not yet any Speakers on this Speakers list</div>
+        <button type="button" class="btn btn-primary btn-fab btn-raised mdi-action-settings pull-right" ng-click="showSettings()" ng-show="isCreator"></button>
+        <div class="well" ng-show="speakers.length == 0">There are not any Speakers on this Speakers list</div>
         <div class="row" ng-show="speakers.length > 0">
             <!-- Next speaker -->
             <div class="col-md-3 hidden-sm hidden-xs">
@@ -32,7 +33,6 @@
             </div>
             <!-- Speakers list -->
             <div class="col-md-9">
-                <button type="button" class="btn btn-primary btn-fab btn-raised mdi-action-settings pull-right" ng-click="showSettings()" ng-show="isCreator"></button>
                 <!-- Speakers functions -->
                 <div class="btn-group">
                     <!-- Add myself as a Speaker -->
