Added e2e protractor tests for login and Event pages

--- a/Web/app/partials/event/deleteEvent.html
+++ b/Web/app/partials/event/deleteEvent.html
@@ -7,6 +7,6 @@
     Are you sure you want to delete '{{event.Name}}'?
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="cancelDelete()">Cancel</button>
-    <button type="button" class="btn btn-danger" ng-click="confirmDelete()">Delete</button>
+    <button type="button" id="deleteCancelButton" class="btn btn-default" ng-click="cancelDelete()">Cancel</button>
+    <button type="button" id="deleteConfirmButton" class="btn btn-danger" ng-click="confirmDelete()">Delete</button>
 </div>
