--- a/Web/app/partials/login.html
+++ b/Web/app/partials/login.html
@@ -3,6 +3,6 @@
     <h4 class="modal-title">Login to yieldto.me</h4>
 </div>
 <div class="modal-body">
-   	<button type="button" class="btn btn-primary" style="width:100%" ng-click="confirmLogin('facebook')">Login with Facebook</button>
-    <button type="button" class="btn btn-danger" style="width:100%" ng-click="confirmLogin('google')">Login with Google</button>
+   	<button type="button" id="facebookButton" class="btn btn-primary" style="width:100%" ng-click="confirmLogin('facebook')">Login with Facebook</button>
+    <button type="button" id="googleButton" class="btn btn-danger" style="width:100%" ng-click="confirmLogin('google')">Login with Google</button>
 </div>
