--- a/Web/app/partials/menus/homeMenu.html
+++ b/Web/app/partials/menus/homeMenu.html
@@ -11,7 +11,7 @@
         <div class="navbar-collapse" collapse="!isNavOpen">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a ng-click="showLogin()">Login / Register</a>
+                    <a id="loginMenu" ng-click="showLogin()">Login / Register</a>
                 </li>
             </ul>
         </div>
