--- a/Web/app/partials/menus/menu.html
+++ b/Web/app/partials/menus/menu.html
@@ -18,8 +18,8 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/events" ng-show="event">Other Model UNs</a></li>                
-                <li><a href="#/editProfile" ng-show="profile.ProfileID">Your Profile</a></li>
-                <li><a id="logoutButton" href="#/logout" ng-show="profile">Logout</a></li>
+                <li><a id="profileMenu" href="#/editProfile" ng-show="profile.ProfileID">Your Profile</a></li>
+                <li><a id="logoutMenu" href="#/logout" ng-show="profile">Logout</a></li>
             </ul>
         </div>
     </div>
