--- a/Web/app/partials/profile/editProfile.html
+++ b/Web/app/partials/profile/editProfile.html
@@ -51,8 +51,8 @@
             </div>
             <div class="row">
                 <div class="text-right">
-                    <button type="button" ng-click="$back()" class="btn btn-default btn-fab btn-raised mdi-navigation-arrow-back"></button>
-                    <button type="submit" ng-disabled="form.$invalid" ng-hide="formDisabled" ng-click="save()" class="btn btn-primary  btn-fab btn-raised mdi-content-save"></button>
+                    <button type="button" id="backButton" ng-click="$back()" class="btn btn-default btn-fab btn-raised mdi-navigation-arrow-back"></button>
+                    <button type="submit" id="saveButton" ng-disabled="form.$invalid" ng-hide="formDisabled" ng-click="save()" class="btn btn-primary  btn-fab btn-raised mdi-content-save"></button>
                 </div>
             </div>
         </div>
