--- a/Web/app/partials/chat/likeAttendee.html
+++ b/Web/app/partials/chat/likeAttendee.html
@@ -7,6 +7,6 @@
     Are you sure you want to like {{attendee.Name}}?
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="cancelLike()">Cancel</button>
-    <button type="button" class="btn btn-danger" ng-click="confirmLike()">Like</button>
+    <button type="button" id="likeCancelButton" class="btn btn-default" ng-click="cancelLike()">Cancel</button>
+    <button type="button" id="likeConfirmButton" class="btn btn-danger" ng-click="confirmLike()">Like</button>
 </div>
