--- a/Web/app/partials/chat/sendMessage.html
+++ b/Web/app/partials/chat/sendMessage.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <button type="button" class="close" ng-click="cancelSend()" aria-hidden="true">&times;</button>
+    <button type="button" id="sendCancelButton" class="close" ng-click="cancelSend()" aria-hidden="true">&times;</button>
     <h4 class="modal-title">Message to {{attendee.Name}}</h4>
 </div>
 <div class="modal-body">
