--- a/Web/app/partials/attendee/attendee.html
+++ b/Web/app/partials/attendee/attendee.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row-content">
     <!-- Edit attendee button -->
-    <button class="btn btn-default btn-lg mdi-content-create pull-right context-button" ng-click="editAttendee(attendee.AttendeeID, $event)" ng-show="isCreator || attendee.Profile.ProfileID == profile.ProfileID"></button>
+    <button id="editButton" class="btn btn-default btn-lg mdi-content-create pull-right context-button" ng-click="editAttendee(attendee.AttendeeID, $event)" ng-show="isCreator || attendee.Profile.ProfileID == profile.ProfileID"></button>
     <!-- Names -->
     <h4 class="list-group-item-heading">{{attendee.Name}}</h4>
     <p class="list-group-item-text">{{attendee.Profile.Name}}</p>
