--- a/Web/app/partials/poll/vote.html
+++ b/Web/app/partials/poll/vote.html
@@ -3,9 +3,7 @@
     <img class="circle pull-left" ng-src="img/profile.jpg" ng-hide="vote.Attendee.Profile">
     <img class="circle pull-left" ng-src="{{vote.Attendee.Profile.ProfilePictureUri}}" ng-show="vote.Attendee.Profile" ng-click="showProfile(vote.Attendee.Profile.ProfileID)">
 </div>
-<div class="row-content">
-    <!-- Edit vote button -->
-    <button class="btn btn-default btn-lg mdi-content-create pull-right context-button" ng-click="vote{{vote.VoteID}}Open=!vote{{vote.VoteID}}Open" ng-show="(poll.Status=='Open' && vote.Attendee.AttendeeID == attendee.AttendeeID) || isCreator"></button>
+<div class="row-content" ng-click="isCreator ? vote{{vote.VoteID}}Open=!vote{{vote.VoteID}}Open : null" >
     <!-- Names -->
     <h4 class="list-group-item-heading">{{vote.Attendee.Name}}</h4>
     <p class="list-group-item-text">{{vote.Attendee.Profile.Name}}</p>
