--- a/Web/app/partials/speakersList/speaker.html
+++ b/Web/app/partials/speakersList/speaker.html
@@ -3,9 +3,7 @@
     <img class="circle pull-left" ng-src="img/profile.jpg" ng-hide="{{speaker.Attendee.Profile}}">
     <img class="circle pull-left" ng-show="{{speaker.Attendee.Profile}}" ng-src="{{speaker.Attendee.Profile.ProfilePictureUri}}" ng-click="showProfile(speaker.Attendee.Profile.ProfileID)">
 </div>
-<div class="row-content">
-    <!-- Edit Speaker button -->
-    <button class="btn btn-default btn-lg mdi-content-create pull-right context-button" ng-show="event.CreatorID == profile.ProfileID || list.CreatorID == profile.ProfileID" ng-click="speaker{{speaker.SpeakerID}}Open=!speaker{{speaker.SpeakerID}}Open"></button>
+<div class="row-content" ng-click="isCreator ? speaker{{speaker.SpeakerID}}Open=!speaker{{speaker.SpeakerID}}Open : null">
     <!-- Names -->
     <h4 class="list-group-item-heading">{{speaker.Attendee.Name}}</h4>
     <p class="list-group-item-text">{{speaker.Attendee.Profile.Name}}</p>
