--- a/Web/app/partials/poll/editPoll.html
+++ b/Web/app/partials/poll/editPoll.html
@@ -30,9 +30,9 @@
             </fieldset>
             <div class="row">
                 <div class="text-right">
-                    <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
-                    <button type="button" ng-click="showDelete()" ng-show="isDeleteEnabled" class="btn btn-danger">Delete</button>
-                    <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary">Save</button>
+                    <button type="button" ng-click="$back()" class="btn btn-default  btn-fab btn-raised mdi-navigation-arrow-back"></button>
+                    <button type="button" ng-click="showDelete()" ng-show="isDeleteEnabled" class="btn btn-danger btn-fab btn-raised mdi-content-clear"></button>
+                    <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary btn-fab btn-raised mdi-content-save"></button>
                 </div>
             </div>
         </form>
